--- a/css/main.css
+++ b/css/main.css
@@ -23,15 +23,15 @@ a:hover {
 
 #left {
     float:left;
-    width:40%;
+    width:46%;
     margin-left:-9px;
 }
 
 #right {
     position:fixed;
     top:50px;
-    width:60%;
-    left:40%;
+    width:54%;
+    left:46%;
     height:100% !important;
     z-index:1200;
 }
@@ -68,10 +68,15 @@ height:calc(100% - 50px) !important;
     position: fixed;
     z-index: 500;
     top: 46px;
-    width: 40%;
+    width: 46%;
     background:white;
     overflow:auto;
-    height:30px;
+    height:70px;
+}
+
+#pagination {
+    margin-left:10px;
+    width:600px;
 }
 
 #search_results {
@@ -162,7 +167,7 @@ height:calc(100% - 50px) !important;
     border: 1px solid black;
     position: relative;
     left:5px;
-    top:76px;
+    top:110px;
 }
 
 #video_search {
