--- a/css/tabs.css
+++ b/css/tabs.css
@@ -63,9 +63,9 @@
 
 .tabs > ul > li.tabActiveHeader{
 	background: #FFFFFF; /* old browsers */
-	background: -webkit-linear-gradient(top, rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(76,76,76,1) 0%,rgba(89,89,89,1) 12%,rgba(102,102,102,1) 27%,rgba(71,71,71,1) 48%,rgba(44,44,44,1) 50%,rgba(43,43,43,1) 76%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%);
 	cursor:pointer;
-	color: #333;
+	color: white;
 }
 
 .tabpage {
