--- a/css/notif.css
+++ b/css/notif.css
@@ -8,7 +8,7 @@
 .notifications {
   position: fixed;
   bottom: 5px;
-  left: 5px;
+  right: 5px;
   width: 400px;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
