--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,13 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 */
+.overlay {
+position: relative;
+left: -100px;
+height: 80;
+margin-right: -100px;
+top: 5px;
+}
 
 #left-component {
   right: 65%;
