--- a/css/tabs.css
+++ b/css/tabs.css
@@ -63,7 +63,7 @@
 
 .tabs > ul > li.tabActiveHeader{
 	background: #FFFFFF; /* old browsers */
-	background: -webkit-linear-gradient(top, rgba(76,76,76,1) 0%,rgba(89,89,89,1) 12%,rgba(102,102,102,1) 27%,rgba(71,71,71,1) 48%,rgba(44,44,44,1) 50%,rgba(43,43,43,1) 76%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(58,60,59,1) 0%,rgba(37,37,37,1) 50%,rgba(4,4,4,1) 51%,rgba(3,3,3,1) 100%);
 	cursor:pointer;
 	color: white;
 }
