--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,12 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 */
 
+.downloadText {
+	position: relative;
+	top: -4px;
+	left: 5px;
+}
+
 pre {
 	white-space: pre-wrap;
 }
