--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ font-weight:bold;
 
 .mejs-controls {
 z-index:10;
+padding-left:5px !important;
 }
 
 .bbc_color, .bbc_table {
@@ -303,7 +304,7 @@ height : calc(100% - 37px) !important;
 }
 
 #song-title {
-	margin-left:2px;
+	margin-left:5px;
 }
 
 .highlight {
