--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,11 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 */
 
+button[aria-label="playlist"] {
+	background: url('../js/mediaelement/build/playlist.png') no-repeat !important;
+	background-position-y: -48px !important;
+}
+
 select, input[type="submit"]{
 	background: -webkit-linear-gradient(top, rgba(235,235,235,1) 0%,rgba(233,233,233,1) 50%,rgba(229,229,229,1) 51%,rgba(247,247,247,1) 100%); 
 	color: black;
